Fixed album thumbs being too close to the top

--- a/app/assets/stylesheets/ui/thumbs/stacks.css
+++ b/app/assets/stylesheets/ui/thumbs/stacks.css
@@ -39,4 +39,5 @@
 
 .post .stack {
 	margin-right: 10px;
+  margin-top: 10px;
 }
